Styling all the pages

--- a/AirLineProject/Register.html
+++ b/AirLineProject/Register.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <h1>TheAlgoGeeks Airlines</h1>
     <hr />
-    First Name   <input type="text"> <br>
-    Last Name    <input type="text"> <br>
-    Email        <input type="email"> <br>
-    Password     <input type="password"> <br>
-    Phone Number <input type="number"> <br> <br>
-    <button>Register</button> <br> <br>
-    <button><a href="./login.html">Click Here</a></button>Already Register <br> <br>
-    <button><a href="./ForgetPassword.html">Click Here</a></button> Forget Password
-</body>
+    <table border="5" cellspacing="10" cellpadding="10">
+      <tr>
+        <td>First Name </td>
+        <td><input type="text" /></td>
+      </tr>
+      <tr>
+        <td>Last Name </td>
+        <td><input type="text" /></td>
+      </tr>
+      <tr>
+        <td>Email </td>
+        <td> <input type="email" /></td>
+      </tr>
+      <tr>
+        <td>Password </td>
+        <td><input type="password" /></td>
+      </tr>
+      <tr>
+        <td>Phone Number</td>
+        <td><input type="number" /></td>
+      </tr>
+    </table>
+    <button>Register</button> <br />
+    <br />
+    <button><a href="./login.html">Click Here</a></button>Already Register
+    <br />
+    <br />
+    <button><a href="./ForgetPassword.html">Click Here</a></button> Forget
+    Password
+  </body>
 </html>
