--- a/AirLineProject/login.html
+++ b/AirLineProject/login.html
@@ -5,18 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>TheAlgoGeeks Airlines</h1>
     <hr />
-    Username: <input type="text" /> <br />
-    Password: <input type="password" /> <br />
-    <button><a href="./Dashboard.html">Login</a></button> <br />
-    <br />
-    Not Register Yet <button><a href="./Register.html">Click Here</a></button>
-    <br />
-    <br />
-    Forget Password
-    <button><a href="./ForgetPassword.html">Click Here</a></button>
+    <table border="5" cellspacing="10" cellpadding="10">
+      <tr>
+        <td> Username:</td>
+        <td> <input type="text" /> </td>
+      </tr>
+        <br />
+      <tr>
+        <td> Password:</td>
+        <td><input type="password" /> </td>
+      </tr>
+    </table>
+    <br>
+     <button style="align-items: center;"><a href="./Dashboard.html">Login</a></button>
+    <br>
+    <br>
+    Not Register Yet
+        <button><a href="./Register.html">Click Here</a></button>
+        <br />
+        <br />
+        Forget Password
+        <button><a href="./ForgetPassword.html">Click Here</a></button>
   </body>
 </html>
