--- a/AirLineProject/ForgetPassword.html
+++ b/AirLineProject/ForgetPassword.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forgot Password</title>
-</head>
-<body>
-    Enter email to receive the link <input type="email" name="" id=""> <br>
-    <button>Get The Link</button> <br>
-    Not Register yet ? <a href="./Register.html">Sign-Up </a>Here <br>
-    Already Register? <a href="./login.html">Sign-In Here</a>
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <table border="5" cellspacing="10" cellpadding="10">
+      <tr>
+        <td>Enter email to receive the link</td>
+        <td>
+          <input type="email" name="" id="" />
+        </td>
+      </tr>
+    </table>
+    <br>
+    <button>Get The Link</button>
+    <br />
+    Not Register yet ?
+    <a href="./Register.html">Sign-Up </a>Here
+    <br />
+    Already Register?
+    <a href="./login.html">Sign-In Here</a>
+  </body>
 </html>
