--- a/AirLineProject/style.html
+++ b/AirLineProject/style.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styling</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TheAlgoGeeks Airline</title>
+    <style>
+      p {
+        font-size: 20px;
+      }
+      div {
+        width: 250px;
+        height: 175px;
+        border: 7px solid blue;
+        padding: 45px;
+        float: left;
+      }
+      #compete {
+        border-radius: 90px;
+        background: red;
+      }
+      #avoid {
+        border-radius: 25% 10%;
+        background: magenta;
+      }
+      #accom {
+        border-radius: 35px 10%;
+        background: cyan;
+      }
+      #collab {
+        border-radius: 10px;
+        background: green;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="compete">
+      <h1>Competing</h1>
+      <p>
+        If your friends are competing with you then they will not share any
+        notes with you
+      </p>
+    </div>
+
+    <div id="avoid">
+      <h1>Avoiding</h1>
+      <p>
+        If your friends are avoiding with you then they will not pickup your
+        calls
+      </p>
+    </div>
+
+    <div id="accom">
+      <h1>Accommodating</h1>
+      <p>
+        If your friends are accommodating with you then they will adjust with
+        you
+      </p>
+    </div>
+
+    <div id="collab">
+      <h1>Collaborating</h1>
+      <p>
+        If your friends are collaborating with you then they will share any
+        notes with you any time they will help you,call you
+      </p>
+    </div>
+  </body>
 </html>
