--- a/AirLineProject/TwoTags.html
+++ b/AirLineProject/TwoTags.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Embed Tag Example</h1>
-    <embed src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fbeautiful%2F&psig=AOvVaw3cevcWQ8Ag_8rv8M2hBN35&ust=1675853456193000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCJjh2uCeg_0CFQAAAAAdAAAAABAE" type="">
-        <iframe width="768" height="432" src="https://www.youtube.com/embed/lAfcr-SmRX4" title="Pulsar Bike Full Video Song | Dhamaka | Ravi Teja | Sreeleela | Thrinadha Rao | Bheems Ceciroleo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+       <iframe width="768" height="432" src="https://www.youtube.com/embed/lAfcr-SmRX4" title="Pulsar Bike Full Video Song | Dhamaka | Ravi Teja | Sreeleela | Thrinadha Rao | Bheems Ceciroleo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121061.99781480285!2d73.78670585820312!3d18.520430300000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf2e67461101%3A0x828d43bf9d9ee343!2sPune%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1675769623104!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h1><map name=""></map></h1>
 </body>
 </html>
