More about JavaScript Function

--- a/JavaScript/ComparisonOp.html
+++ b/JavaScript/ComparisonOp.html
@@ -10,8 +10,8 @@
     <script>
 
               alert('2> 1'+ (2 > 1) );  // true (correct)
-
-              alert('2 == 1' + (2 == 1) ); // false (wrong) alert('2!=1 + (2 != 1) ); // true (correct)
+              alert('2 == 1' + (2 == 1) ); // false (wrong) 
+              alert('2!=1' + (2 != 1) ); // true (correct)
 
               97a...122z
 
