--- a/JavaScript/FunctionAsPrime.html
+++ b/JavaScript/FunctionAsPrime.html
@@ -26,11 +26,11 @@
         }
         return true;
       }
-      showPrime(100);
+      showPrimes(100);
       let num = prompt("Enter a number"); //100
       //and show it if prime or not
       if (isPrime(num)) {
-        alert("its a prime number");
+        alert("it a prime number");
       } else {
         alert("its a not prime number");
       }
