--- a/JavaScript/CallBackFunction3.html
+++ b/JavaScript/CallBackFunction3.html
@@ -1,35 +1,29 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+  <body>
+    <p>Before the script...</p>
 
-<body>
-		
-  <p>Before the script...</p>
+    <script>
+      "use strict"; // TRY THIS ONE NOW
 
-  <script>
-	'use strict';  // TRY THIS ONE NOW
-	
-	let welcome;
-	
-	let age = prompt("What is your age?", 18);
+      let welcome;
 
-	// conditionally declare a function
-	if (age < 18) {
-		welcome=function welcome(to) {
-		    alert("Hello!"+to);
-  		}
-	} 
-	else { 
-		welcome=function welcome(to)  {
-		    alert("Greetings!"+to);
-		 }
-	}
+      let age = prompt("What is your age?", 18);
 
-	welcome('vishal'); // Error: welcome is not defined
+      // conditionally declare a function
+      if (age < 18) {
+        welcome = function welcome(to) {
+          alert("Hello!" + to);
+        };
+      } else {
+        welcome = function welcome(to) {
+          alert("Greetings!" + to);
+        };
+      }
 
-  </script>
+      welcome("Jaydeep"); // Error: welcome is not defined
+    </script>
 
-  <p>...After the script.</p>
-
-</body>
-
+    <p>...After the script.</p>
+  </body>
 </html>
